--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div
       id="preloader"
       class="fixed inset-0 z-50 bg-white flex items-center justify-center flex-col"
+      style="touch-action: none; overscroll-behavior: none"
     >
       <div class="preloader-content">
         <h1
